compiler/testData/diagnostics/tests/enum/enumWithAnnotationKeyword.kt
<!WRONG_MODIFIER_TARGET!>annotation<!> enum class E {
    D
}